Replace custom transformer by the DSL's co-group